Make sure canvas is directly inside the canvas-text 'display: grid', otherwise keyboard does not appear on iOS. Fixes #99

--- a/src/canvas.css
+++ b/src/canvas.css
@@ -1,11 +1,11 @@
-.canvasText {
+.canvas-text {
   display: grid;
   text-align: center;
   vertical-align: middle;
   padding-bottom: 0px;
 }
 
-.mainCanvas {
+.main-canvas {
   grid-column: 1;
   grid-row: 1;
   border-color: #583927;
@@ -16,7 +16,7 @@
   z-index: 0;
 }
 
-.hiddenTextarea {
+.hidden-textarea {
   grid-column: 1;
   grid-row: 1;
   opacity: 0;
@@ -53,7 +53,7 @@ body.dark-mode .hgr-view-text {
   color: var(--text-color-dark);
 }
 
-.scanlines::after {
+.scanline-gradient::after {
   display: var(--scanlines-display, none);
   pointer-events: none;
   content: "";
